--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Pillow>=9.5.0
-flask>=2.0.0
-requests>=2.30.0
-python-dotenv>=0.19.0 
+Flask==2.3.3
+Pillow==10.0.0
+requests==2.31.0
+Werkzeug==2.3.7 
