--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,9 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/app.py" },
-    { "src": "/", "dest": "/api/app.py" }
+    {
+      "src": "/(.*)",
+      "dest": "/api/app.py"
+    }
   ]
 }
