--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,7 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/app.py"
-    }
+    { "src": "/api/(.*)", "dest": "/api/app.py" },
+    { "src": "/", "dest": "/api/app.py" }
   ]
 }
