--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: gif-maker
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn api.app:app
+    startCommand: gunicorn wsgi:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: PORT
+        value: 10000
     autoDeploy: true 
